--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,24 @@
+:root {
+  --yellow: #F7D619; // yellow
+  --black:#000000;
+  --white:#FFFFFF;
+  --blue:#0047A0;
+  --red: #CD2E3A;
+
+  --primary-color: var(--blue);
+  --secondary-color: var(-red); 
+  --tertiary-color: var(--yellow); 
+}
+
 body{
-  background-color: #F4F4F4;
+  background-color: #F3F3F3 !important;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   padding-bottom:2rem;
+}
+
+.mui-active{
+  .MuiTableSortLabel-icon{
+    color: var(--secondary-color);
+  }
 }
