--- a/src/App.scss
+++ b/src/App.scss
@@ -12,9 +12,11 @@
 
 body{
   background-color: #F3F3F3 !important;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  padding-bottom:2rem;
+  section#content{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    padding-bottom:2rem;
+  }
 }
 
 .mui-active{
