--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,24 +1,51 @@
 @import "./Palette.scss";
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background-image: url("../assets/header.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   background-color: #e3e3e3 !important;
   section#content {
+    margin: auto;
+    margin-top:85px;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-bottom: 0.5rem;
   }
 }
 
+.app-toolbar {
+  width: calc(100% - 14px) !important;
+  color: var(--black) !important;
+}
 .mui-active {
   .MuiTableSortLabel-icon {
     color: var(--secondary-color);
   }
 }
 .MuiPaper-root {
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.4
+  ) !important; // Semi-transparent white
+  backdrop-filter: blur(
+    10px
+  ) !important; // Apply a blur effect to the content behind the element
   &.table-filter {
     .MuiCardContent-root {
       padding: 16px;
     }
+  }
+  .MuiBottomNavigation-root {
+    background-color: transparent;
   }
 }
 
