--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -36,6 +36,7 @@ body {
 .app-toolbar {
   width: calc(100% - 14px) !important;
   color: var(--black) !important;
+  border-radius: 4px;
 }
 .mui-active {
   .MuiTableSortLabel-icon {
@@ -43,6 +44,48 @@ body {
   }
 }
 
+.easteregg {
+  margin-right: 8px;
+  z-index: 99999;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  object-fit: contain;
+  transform: translateY(0) scale(1); // Add this line
+
+  &::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); 
+  }
+
+  &.clicked {
+    animation: scrollAndScale 2s forwards;
+
+    @keyframes scrollAndScale {
+      0% {
+        transform: translateY(0) scale(0);
+      }
+      50% {
+        transform: translateY(-50px) scale(1.5);
+        -webkit-transform: translateY(-50px) scale(1.5);
+        -moz-transform: translateY(-50px) scale(1.5);
+        -ms-transform: translateY(-50px) scale(1.5);
+        -o-transform: translateY(-50px) scale(1.5);
+      }
+      100% {
+        transform: translateY(0) scale(1);
+      }
+    }
+  }
+  
+}
 .text {
   display: inline;
   &.text-primary {
@@ -80,6 +123,10 @@ body {
     10px
   ) !important; // Apply a blur effect to the content behind the element
 
+  &.max-width {
+    width: 500px;
+    max-width: calc(100vw - 14px);
+  }
   &.alert {
     margin: 14px 0px;
     p {
@@ -181,6 +228,9 @@ table {
   width: 500px;
   max-width: calc(100vw - 14px);
   height: 190px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flip-card .card-front,
@@ -190,6 +240,9 @@ table {
   height: 100%;
   backface-visibility: hidden;
   transition: transform 0.6s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flip-card .card-front {
@@ -198,10 +251,6 @@ table {
 
 .flip-card .card-back {
   transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -o-transform: rotateY(-180deg);
 }
 
 .flip-card.flipped .card-front {
