--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -55,14 +55,14 @@ body {
   object-fit: contain;
   transform: translateY(0) scale(1); // Add this line
 
-  &::before{
+  &::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); 
+    background: rgba(0, 0, 0, 0.5);
   }
 
   &.clicked {
@@ -84,8 +84,8 @@ body {
       }
     }
   }
-  
 }
+
 .text {
   display: inline;
   &.text-primary {
@@ -127,6 +127,7 @@ body {
     width: 500px !important;
     max-width: calc(100vw - 14px) !important;
   }
+
   &.alert {
     margin: 14px 0px;
     p {
@@ -144,6 +145,9 @@ body {
     }
     &.alert-success {
       @include alert-style($success);
+    }
+    &.alert-default {
+      @include alert-style($black);
     }
   }
 
